@@ -13161,6 +13161,10 @@ $g$ a permutation of the same domain, return $1$ if $gGg^{-1}=G$, else $0$.
 $H$ is a subgroup of $G$, returns the quotient map $G\rightarrow G/H$
 as an abstract data structure.
 
+\fun{GEN}{groupelts_quotient}{GEN elts, GEN H}, where \var{elts} is the list of
+elements of a small group $G$, $H$ is a subgroup of $G$, returns the quotient
+map $G\rightarrow G/H$ as an abstract data structure.
+
 \fun{GEN}{quotient_perm}{GEN C, GEN g} where $C$ is the quotient map
 $G\rightarrow G/H$ for some subgroup $H$ of $G$ and $g$ an element of $G$,
 return the image of $g$ by $C$ (i.e. the coset $gH$).
