@@ -4443,6 +4443,7 @@ GEN     group_to_cc(GEN G);
 GEN     groupelts_abelian_group(GEN S);
 GEN     groupelts_center(GEN S);
 GEN     groupelts_conjclasses(GEN elts, long *nbcl);
+GEN     groupelts_quotient(GEN G, GEN H);
 GEN     groupelts_set(GEN G, long n);
 GEN     numtoperm(long n, GEN x);
 GEN     perm_cycles(GEN v);
